# grounded-qa

./: .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  PHASE.md  README.md  TASKS.md
.agents/skills/adding-ingestion-format/: SKILL.md
.agents/skills/eval-metric-conventions/: SKILL.md
.agents/skills/langgraph-conventions/: SKILL.md
.claude/skills/vue-component-conventions/: SKILL.md
backend/: .env.example  config.py  main.py  pyproject.toml  schemas.py
backend/graphs/: __init__.py  ask_graph.py
backend/routes/: ask.py  auth.py  documents.py  eval.py  upload.py
backend/services/: auth.py  embedding.py  eval_harness.py  generation.py  ingestion.py  qdrant.py  retrieval.py
frontend/: .env.example  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue
frontend/src/components/: ChatPanel.vue  EvalDashboard.vue  SourceCitation.vue  UploadPanel.vue
frontend/src/composables/: useAuth.js  useChat.js  useEval.js  useUpload.js
frontend/src/router/: index.js
frontend/src/services/: api.js  supabase.js
frontend/src/views/: Chat.vue  Documents.vue  Eval.vue  Login.vue
