[project]
name = "grounded-qa-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.117.1",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.1",
    "openai>=1.54.0",
    "qdrant-client[fastembed]>=1.12.0",
    "docling>=2.0.0",
    "python-multipart>=0.0.12",
    "supabase>=2.9.0",
    "langgraph>=1.0.0",
    "langsmith>=0.10.0",
]

[tool.vercel]
entrypoint = "main:app"
